# MkDocs-Material-Langly

./: LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
src/: localizer.py  plugin.py
